Turned off dark mode until fixed.

--- a/pages/Group-Page/assets/css/GroupPageMain.css
+++ b/pages/Group-Page/assets/css/GroupPageMain.css
@@ -380,7 +380,7 @@ tr:hover {
 /* https://polypane.app/blog/the-complete-guide-to-css-media-queries/
 https://levelup.gitconnected.com/dynamic-dark-light-mode-on-the-web-d55e4c0d3aa9 */
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
 	:root {
 		background: #000000;
 		filter: invert(1) hue-rotate(180deg);
@@ -392,4 +392,4 @@ https://levelup.gitconnected.com/dynamic-dark-light-mode-on-the-web-d55e4c0d3aa9
 	img:hover {
 		opacity: 1;
 	}
-}
+} */
